stateDiagram-v2
    direction TB

    [*] --> pending : ARI agentrun/create

    pending --> creating : daemon fork 进程
    creating --> idle : runtime 上报 (ACP 握手完成)

    idle --> running : runtime 上报 (prompt 开始)
    running --> idle : runtime 上报 (prompt 完成)

    pending --> error : fork 失败
    creating --> error : 握手失败
    idle --> error : 不可恢复错误
    running --> error : 不可恢复错误

    creating --> stopped : 进程异常退出
    idle --> stopped : 进程退出 / agentrun/stop
    running --> stopped : 进程退出 / agentrun/stop

    stopped --> [*] : agentrun/delete
    error --> [*] : agentrun/delete

    note right of pending : daemon 层状态\nDB 记录已创建\n进程未 fork
    note right of creating : runtime 层状态\n进程已启动\nACP 握手中
    note left of stopped : 终态\n可 delete 或 restart
    note left of error : 终态\n可 delete 或 restart
